@@ -43,6 +43,13 @@ static const char rcsid[] = "#(@) $Id$";
  *   9/1999 - 10/2000
  * HISTORY
  *   $Log$
+ *   Revision 1.8.4.3.2.1  2008/09/10 00:07:44  felipe
+ *   MFH:
+ *   - Merged fix from SF project (Import Jeff Lawsons patches for XML datetime bug fixes)
+ *     Fixed bugs:
+ *     #45226 (xmlrpc_set_type() segfaults with valid ISO8601 date string)
+ *     #18916 (xmlrpc_set_type() "not working")
+ *
  *   Revision 1.8.4.3  2007/09/18 19:49:53  iliaa
  *
  *   Fixed bug #42189 (xmlrpc_set_type() crashes php on invalid datetime
@@ -1161,13 +1168,13 @@ int XMLRPC_AddValueToVector(XMLRPC_VALUE target, XMLRPC_VALUE source) {
                   }
                }
                else {
-					fprintf (stderr,
-								"xmlrpc: attempted to add key/val pair to vector of type array\n");
+					/* fprintf (stderr,
+								"xmlrpc: attempted to add key/val pair to vector of type array\n"); */
                }
                break;
             default:
-				fprintf (stderr,
-							"xmlrpc: attempted to add value of unknown type to vector\n");
+				/* fprintf (stderr,
+							"xmlrpc: attempted to add value of unknown type to vector\n"); */
                break;
          }
       }
@@ -1497,8 +1504,8 @@ void XMLRPC_CleanupValue(XMLRPC_VALUE value) {
                my_free(value);
                break;
             default:
-				fprintf (stderr,
-							"xmlrpc: attempted to free value of invalid type\n");
+				/* fprintf (stderr,
+							"xmlrpc: attempted to free value of invalid type\n"); */
                break;
          }
       }
